--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,9 @@
   <build_depend>moveit_msgs</build_depend>
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_robot_trajectory</build_depend>
+  <build_depend>octomap</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
 
   <run_depend>message_runtime</run_depend>
   <run_depend>std_msgs</run_depend>
@@ -69,6 +72,9 @@
   <run_depend>moveit_msgs</run_depend>
   <run_depend>moveit_core</run_depend>
   <run_depend>moveit_robot_trajectory</run_depend>
+  <run_depend>octomap</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
