--- a/yaml/kollrobot_controller.yaml
+++ b/yaml/kollrobot_controller.yaml
@@ -1,7 +1,10 @@
 MG_manipulator:
   RefreshRate: 20
   SetConstraints: false
-  MaxAccelerationScale: 0.8
-  MaxVelocityScale: 0.8
+  MaxAccelerationScale: 0.1
+  MaxVelocityScale: 0.1
   PlanningTime: 5
   SecurityRange: 0.02
+  
+kollrobot_controller:
+  GripperRotOffset: 48.0
